--- a/cart.html
+++ b/cart.html
@@ -14,7 +14,7 @@
 <!-- Just an image -->
 <nav class="navbar navbar-light bg-light px-4">
     <a class="navbar-brand" href="#">
-      <img src="./Group 2.png" width="100" height="40" alt="">
+      <img src="./Group 2.png" width="100" height="40" alt="" class="navimg">
     </a>
     <div class="my-2 my-lg-0" id="navbarText">
         <img class="navimg" src="./heart_outline.png" alt="">
@@ -139,9 +139,10 @@
             </div>
         </div>
     </div>
+</div>    
     <footer class="footer">
         <div class="container">
-          <div class="row">
+          <div class="navbar nnavbar-fixed-bottom">
               <div class="col">Stackfill. All Rights reserved</div>
               <div class="col">Order Tracking</div>
               <div class="col"> Support</div>
@@ -153,6 +154,5 @@
           </div>
         </div>
       </footer>
-</div>
 </body>
 </html>
