--- a/cart.html
+++ b/cart.html
@@ -42,19 +42,19 @@
                 <table class="table">
                     <thead class="t-head">
                         <tr>
-                            <th class="col-2">PRODUCT</th>
-                            <th class="col-3"></th>
-                            <th class="col-2">PRICE</th>
-                            <th class="col-3">QUANTITY</th>
-                            <th class="col-2">TOTAL</th>
+                            <th scope="col">PRODUCT</th>
+                            <th scope="col"></th>
+                            <th scope="col">PRICE</th>
+                            <th scope="col">QUANTITY</th>
+                            <th scope="col">TOTAL</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="col-2 px-0">
+                            <td class="">
                                 <img class="item-img" src="./image 2.png" alt="">
                             </td>
-                            <td class="col-3 px-0 pr-4">
+                            <td class="">
                                 <div class="descr">
                                 <span>Rechargeable Wireless Speakers and Table Clock</span> <br>
                                 <span class="item_desc">Color: Black</span><br>
@@ -95,10 +95,10 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-2 px-0">
+                            <td class="">
                                 <img class="item-img" src="./image 5.png" alt="">
                             </td>
-                            <td class="col-3 px-0">
+                            <td class="">
                                 <div class="descr">
                                 <span>Portable Bluetooth Outdoor Speaker version-1539</span> <br>
                                 <span class="item_desc">Color: Red</span><br>
@@ -149,11 +149,11 @@
         </div>
         <div class="col-3 check">
             <div class="order-s">
-                        <div class="row checkout_tr">
+                        <div class="row pt-3 pb-3 checkout_tr">
                             <div class="col"><b>Order Summary</b></div>
                             <div class="col"></div>
                         </div>
-                        <div class="row checkout_tr">
+                        <div class="row pb-4 pt-4 checkout_tr">
                             <div class="col item_desc">Subtotal:</div>
                             <div class="col">27,500</div>
                             </div>
@@ -177,10 +177,10 @@
         </div>
     </div>
 </div>    
-    <footer class="footer">
+    <footer>
         <div class="container">
           <div class="navbar navbar-fixed-bottom row">
-              <div class="col">Stackfill. All Rights reserved</div>
+              <div class="col">&copy Stackfill. All Rights reserved</div>
               <div class="col"> 
                 <span class="footer_links">Order Tracking</span>
                 <span class="footer_links">Support</span> 
