--- a/cart.html
+++ b/cart.html
@@ -14,10 +14,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
             rel="stylesheet"
         />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap"
-            rel="stylesheet"
-        />
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- Just an image -->
@@ -52,7 +49,7 @@
                     <tbody>
                         <tr>
                             <td class="">
-                                <img class="item-img" src="./image 2.png" alt="">
+                                <img class="item-img" src="images/image 2.png" alt="">
                             </td>
                             <td class="">
                                 <div class="descr">
@@ -64,7 +61,7 @@
                                  
                             </td>
                             <td class="col-2">
-                                <p class="price_margin">7500 NGN</p>
+                                <p class="price_margin">7,500 NGN</p>
                             </td>
                             <td class="col-3">
                                 <div class="quantity-controller">
@@ -78,7 +75,7 @@
                                         type="number"
                                         min="0"
                                         max="99999"
-                                        value="88888"
+                                        value="1"
                                         class="quantity-text"
                                         id="product-quantity"
                                     />
@@ -96,7 +93,7 @@
                         </tr>
                         <tr>
                             <td class="">
-                                <img class="item-img" src="./image 5.png" alt="">
+                                <img class="item-img" src="images/image 5.png" alt="">
                             </td>
                             <td class="">
                                 <div class="descr">
@@ -108,7 +105,7 @@
                                  
                             </td>
                             <td class="col-2">
-                                <p class="price_margin">19 500 NGN</p>
+                                <p class="price_margin">19,500 NGN</p>
                             </td>
                             <td class="col-3">
                                 <div class="quantity-controller">
@@ -122,7 +119,7 @@
                                         type="number"
                                         min="0"
                                         max="99999"
-                                        value="88888"
+                                        value="3"
                                         class="quantity-text"
                                         id="product-quantity"
                                     />
