--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </nav>
 <div class="container">
     <div class="row">
-        <div class="col-8 first">
+        <div class="col-sm-8 first">
             <div class="row justify-content-left">
                 <h4>My Cart</h4>
             </div>
@@ -144,7 +144,7 @@
         <div class="col-1">
 
         </div>
-        <div class="col-3 check">
+        <div class="col-sm-3 check">
             <div class="order-s">
                         <div class="row pt-3 pb-3 checkout_tr">
                             <div class="col"><b>Order Summary</b></div>
