--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <table class="table">
                     <thead class="t-head">
                         <tr>
-                            <th scope="col">PRODUCT</th>
+                            <th scope="col" class="d-none d-sm-table-cell">PRODUCT</th>
                             <th scope="col"></th>
                             <th scope="col">PRICE</th>
                             <th scope="col">QUANTITY</th>
@@ -48,7 +48,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="">
+                            <td class="d-none d-sm-table-cell">
                                 <img class="item-img" src="images/image 2.png" alt="">
                             </td>
                             <td class="">
@@ -63,7 +63,7 @@
                             <td class="col-2">
                                 <p class="price_margin">7,500 NGN</p>
                             </td>
-                            <td class="col-3">
+                            <td class="col-sm-3">
                                 <div class="quantity-controller">
                                     <button
                                         class="quantity-button active-button"
@@ -92,7 +92,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="">
+                            <td class="d-none d-sm-table-cell">
                                 <img class="item-img" src="images/image 5.png" alt="">
                             </td>
                             <td class="">
@@ -107,7 +107,7 @@
                             <td class="col-2">
                                 <p class="price_margin">19,500 NGN</p>
                             </td>
-                            <td class="col-3">
+                            <td class="col-sm-3">
                                 <div class="quantity-controller">
                                     <button
                                         class="quantity-button active-button"
